# withered-bookmark-reborn

./: .gitignore  CLAUDE.md  LICENSE  README.md  deploy.sh  justfile  test-deployment.sh  update.sh
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: bookmarks.py  search.py
backend/app/models/: database.py  schemas.py
backend/app/services/: bookmark_importer.py  content_enricher.py  tfidf_vectorizer.py
backend/tests/: conftest.py
backend/tests/unit/api/: test_bookmarks.py
docs/: project-overview.md  setup.md  task_breakdown.md  uv-guide.md
docs/plan/: introduce.md  product_requirements.md  tech_stack.md
docs/ui/: ui.md  認知負荷.md  顧問報告.md
extension/: manifest.json
extension/background/: background.js
extension/content/: content.css  content.js
extension/popup/: popup.css  popup.html  popup.js
frontend/: .env.development  .env.production  .prettierrc  eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: AddNewBookmarkModal.vue  BookmarkList.vue  SearchBar.vue  SearchResults.vue  UpdateBookmarkModal.vue
frontend/src/composables/: useBookmarkModal.ts  useBookmarkSearch.ts
frontend/src/pages/: BookmarksView.vue  HomeView.vue  SearchView.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: bookmark.ts  search.ts
scripts/: dev.bat  dev.sh  init-git.bat  init-git.sh  setup.bat  setup.sh
shared/types/: index.ts
(+3 files in other folders)
