[project]
name = "withered-bookmark-reborn-backend"
version = "1.0.0"
description = "枯枝逢生 - 智能書籤助手後端"
authors = [
    {name = "xinliang", email = "xllin0050@gmail.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "jieba>=0.42.1",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.3",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
requires-python = ">=3.8.1"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100  # 依照自己的專案需求設定

[tool.ruff.lint]
select = ["E", "F", "I"]  # 至少會加入 I，因為 isort 是必要的

[tool.ruff.format]
quote-style = "double"  # 依照自己的喜好或專案需求設定

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
